--- a/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - ROM Map.wikitext
+++ b/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - ROM Map.wikitext
@@ -50,13 +50,13 @@ For now, these are rom file addresses
 
 Referenced code: [https://github.com/ButThouMust/dq6-sfc/blob/main/FontDumperDQ3.java on github]
 
-Dialog font lookup table: [https://github.com/ButThouMust/dq6-sfc/blob/main/FontDumperDQ3.java data file]
+Dialog font lookup table: [https://raw.githubusercontent.com/TheAnsarya/GameInfo/refs/heads/main/Dragon%20Quest%20III%20(SNES)/Debugging/ROM%20values/Dialog%20font%20lookup%20table.txt data file]
 
 {| class="wikitable sortable"
 |-
 !  Category  !!  Address  !! Size  !!  Description
 |-
-|  Font Data  ||  $c10ed3 - $c1519d++  ||  ?? bytes  || Dialog font data, ending is a little after $c1519d (start of last entry)
+|  Font Data  ||  $c10ed3 - $c151a9  ||  $42d7 bytes  || Dialog font data
 |-
 |  Font Settings  ||  $c151aa - $c152a3  ||  $fa bytes  ||  Dialog font lookup table, 50 structs of 5 bytes each
 |-
@@ -64,11 +64,14 @@ Dialog font lookup table: [https://github.com/ButThouMust/dq6-sfc/blob/main/Font
 |}
 
 ====Dialog font lookup table structure====
-gggggggg ggggwwww oooooooo oooooooo 00hhhh00
+gggggggg wwwwgggg aaaaaaaa aaaaaaaa 00hhhh00
 
 g: group size, 12 bits
+
 w: width, 4 bits
-o: offset, 16 bits (combines with bank to create pointer to data)
+
+a: offset address, 16 bits (combines with bank to create pointer to data)
+
 h: height, 4 bits
 
 ==Monsters==
@@ -522,6 +525,155 @@ Values range from $00 to $EC because the definitions for tiles $ED to $FF are no
 Location in ROM: $254F38 - $25569F
 
 Each entry is 8 bytes with each 2 bytes representing one of the 4 tiles (8x8) that make up the larger 16x16 tile. These 2 byte parts are in the standard SNES tilemap format and are copied as is into VRAM.
+
+==Japanese Dialogue Text==
+In the Japanese game revision with CRC32 13836bd2, text is compressed with Huffman coding, and spans the range $3CC258 to $3ECFB5 in the ROM. This section assumes that you are familiar with how Huffman coding works. Pointers and data in the examples are based on the previously mentioned revision.
+
+It is worth noting that the dialogue in Dragon Quest VI SNES uses the exact same system, only with different pointers and table sizes.
+
+===Huffman tree data===
+Two parallel data blocks, each $7D4 bytes ($3EA two-byte entries): one from $159D3-$161A6 (for 0 bits, "left"), and another from $161A7-$1697A (for 1 bits, "right"). The blocks are parallel in that the number of entries into a block represents a split point in the Huffman tree, either left or right. A two-byte (little endian) entry has a flag for inner/leaf node in the tree (MSB set = inner node, MSB clear = leaf node). Inner nodes encode the byte position to go to for checking the next bit. Leaf nodes contain the character encoding value itself.
+
+As an example, tree entry $3E4 represents the offsets $159D3 + $3E4*2 = $1619B (left) and $161A7 + $3E4*2 = $1696F (right). The data at each offset is, respectively, $0200 (leaf node for character encoding $0200 = a space) and $87BC. The latter represents an inner node for the byte position $7BC in the tree data, which corresponds to tree entry ($7BC >> 1) = $3DE.
+
+===Text pointer table===
+Range $15331-$1591E in the ROM. It consists of $1FA three-byte entries, each of which is for a block of 8 strings, except the last one which has 7. Thus, there is a total of $FCF (4047) strings. Each string is terminated with the control code 00AC or 00AE.
+
+The 24 bits of a text pointer consist of two parts. The high 21 bits represent a byte offset from the start of the script at $3CC258, and the low 3 bits represent a bit within that byte (bit 7 is the most significant, bit 0 is the least significant).
+
+As an example, the bytes of the sixth pointer value at $15340 are <code>79 12 00</code>, or the hex value $001279. The bit offset is ($001279 & 7) = 1. The byte offset is ($001279 >> 3) = $24F. So the sixth pointer goes to byte ($3CC258 + $24F) = $3CC4A7 at bit position 1.
+
+===Decompression example===
+To decompress a character from the script, feed in text bits to the Huffman tree, starting at tree position $3E9 (end position in the tree). In the text data, start at the bit position in the byte and going "left to right" = from most significant to least significant. Keep getting offsets in the Huffman tree data until you reach a leaf node.
+
+If you were to feed in bits starting at $3CC4A7 bit position 1, you should start on the 111111_'''0'''_1 bit of the <code>FD</code> byte there, consume the twelve bits 01 1111 1010 01 in the buffer from the <code>FD FA 76</code> bytes, and take a path in the Huffman tree data to ROM position $166C1 (character value $0521, ツ).
+
+==Dialogue Font==
+The variable-width and variable-height font is stored in two blocks: a metadata table from $151AA-$1512A3, and the font data itself from $10ED3-$151A9.
+
+===Font metadata table===
+The table consists of 50 five-byte entries that come in the following binary format:
+
+<code>SSSSSSSS WWWWSSSS [bank $C1 offset] --HHHH--</code>
+
+W = character width, H = character height
+
+S = number of characters in a group for a particular W*H pair
+
+The bank number being $c1 is hard-coded into the <code>lda #$c1</code> instruction at $1BBD4.
+
+<div class="mw-collapsible mw-collapsed">
+<strong>Summary of font metadata table</strong>
+<div class="mw-collapsible-content">
+{| class="wikitable"
+|-
+!  Group #  ||  Address  ||  Raw Data  ||  Width  ||  Height  ||  # Characters  || Character range  ||  ROM addr
+|-
+!  1  ||  $c151aa  ||  b4 b2 d3 0e 34  ||  b  ||  d  || 2b4 ||  $201 - $4b4  ||  $c10ed3
+|-
+!  2  ||  $c151ad  ||  0b 70 25 3f 30  ||  7  ||  c  ||   b ||  $4b5 - $4bf  ||  $c13f25
+|-
+!  3  ||  $c151b0  ||  01 50 99 3f 30  ||  5  ||  c  ||   1 ||  $4c0  ||  $c13f99
+|-
+!  4  ||  $c151b3  ||  1b 90 a1 3f 2c  ||  9  ||  b  ||  1b ||  $4c1 - $4db  ||  $c13fa1
+|-
+!  5  ||  $c151b6  ||  11 80 f0 40 2c  ||  8  ||  b  ||  11 ||  $4dc - $4ec  ||  $c140f0
+|-
+!  6  ||  $c151b9  ||  06 70 ab 41 2c  ||  7  ||  b  ||   6 ||  $4ed - $4f2  ||  $c141ab
+|-
+!  7  ||  $c151bc  ||  01 50 e5 41 2c  ||  5  ||  b  ||   1 ||  $4f3  ||  $c141e5
+|-
+!  8  ||  $c151bf  ||  1b b0 ec 41 2c  ||  b  ||  b  ||  1b ||  $4f4 - $50e  ||  $c141ec
+|-
+!  9  ||  $c151c2  ||  16 a0 85 43 2c  ||  a  ||  b  ||  16 ||  $50f - $524  ||  $c14385
+|-
+!  10  || $151c5 || 03 30 b4 44 2c || 3 || b ||   3 || 525-527 || $144b4
+|-
+!  11  || $151c8 || 03 90 c1 44 0c || 9 || 3 ||   3 || 528-52a || $144c1
+|-
+!  12  || $151cb || 02 90 cc 44 1c || 9 || 7 ||   2 || 52b-52c || $144cc
+|-
+!  13  || $151ce || 04 90 dc 44 30 || 9 || c ||   4 || 52d-530 || $144dc
+|-
+!  14  || $151d1 || 01 90 12 45 04 || 9 || 1 ||   1 || 531     || $14512
+|-
+!  15  || $151d4 || 01 70 14 45 04 || 7 || 1 ||   1 || 532     || $14514
+|-
+!  16  || $151d7 || 02 70 15 45 28 || 7 || a ||   2 || 533-534 || $14515
+|-
+!  17  || $151da || 03 90 27 45 18 || 9 || 6 ||   3 || 535-537 || $14527
+|-
+!  18  || $151dd || 18 c0 3c 45 30 || c || c ||  18 || 538-54f || $1453c
+|-
+!  19  || $151e0 || 01 a0 ec 46 18 || a || 6 ||   1 || 550     || $146ec
+|-
+!  20  || $151e3 || 01 40 f4 46 30 || 4 || c ||   1 || 551     || $146f4
+|-
+!  21  || $151e6 || 02 60 fa 46 34 || 6 || d ||   2 || 552-553 || $146fa
+|-
+!  22  || $151e9 || 01 50 0e 47 34 || 5 || d ||   1 || 554     || $1470e
+|-
+!  23  || $151ec || 03 60 17 47 24 || 6 || 9 ||   3 || 555-557 || $14717
+|-
+!  24  || $151ef || 02 a0 2c 47 20 || a || 8 ||   2 || 558-559 || $1472c
+|-
+!  25  || $151f2 || 0c a0 40 47 30 || a || c ||   c || 55a-565 || $14740
+|-
+!  26  || $151f5 || 05 80 f4 47 30 || 8 || c ||   5 || 566-56a || $147f4
+|-
+!  27  || $151f8 || 4e b0 30 48 30 || b || c ||  4e || 56b-5b8 || $14830
+|-
+!  28  || $151fb || 06 80 37 4d 24 || 8 || 9 ||   6 || 5b9-5be || $14d37
+|-
+!  29  || $151fe || 0e a0 6d 4d 34 || a || d ||   e || 5bf-5cc || $14d6d
+|-
+!  30  || $15201 || 05 90 51 4e 34 || 9 || d ||   5 || 5cd-5d1 || $14e51
+|-
+!  31  || $15204 || 04 b0 9b 4e 28 || b || a ||   4 || 5d2-5d5 || $14e9b
+|-
+!  32  || $15207 || 03 70 d2 4e 24 || 7 || 9 ||   3 || 5d6-5d8 || $14ed2
+|-
+!  33  || $1520a || 0d c0 ea 4e 2c || c || b ||   d || 5d9-5e5 || $14eea
+|-
+!  34  || $1520d || 03 d0 c1 4f 2c || d || b ||   3 || 5e6-5e8 || $14fc1
+|-
+!  35  || $15210 || 01 80 f7 4f 28 || 8 || a ||   1 || 5e9     || $14ff7
+|-
+!  36  || $15213 || 04 80 01 50 20 || 8 || 8 ||   4 || 5ea-5ed || $15001
+|-
+!  37  || $15216 || 02 b0 21 50 24 || b || 9 ||   2 || 5ee-5ef || $15021
+|-
+!  38  || $15219 || 03 a0 3a 50 28 || a || a ||   3 || 5f0-5f2 || $1503a
+|-
+!  39  || $1521c || 09 90 60 50 28 || 9 || a ||   9 || 5f3-5fb || $15060
+|-
+!  40  || $1521f || 01 b0 c6 50 38 || b || e ||   1 || 5fc     || $150c6
+|-
+!  41  || $15222 || 01 b0 da 50 1c || b || 7 ||   1 || 5fd     || $150da
+|-
+!  42  || $15225 || 01 d0 e4 50 30 || d || c ||   1 || 5fe     || $150e4
+|-
+!  43  || $15228 || 01 70 f8 50 1c || 7 || 7 ||   1 || 5ff     || $150f8
+|-
+!  44  || $1522b || 02 a0 ff 50 24 || a || 9 ||   2 || 600-601 || $150ff
+|-
+!  45  || $1522e || 01 c0 16 51 24 || c || 9 ||   1 || 602     || $15116
+|-
+!  46  || $15231 || 05 c0 24 51 34 || c || d ||   5 || 603-607 || $15124
+|-
+!  47  || $15234 || 01 80 86 51 18 || 8 || 6 ||   1 || 608     || $15186
+|-
+!  48  || $15237 || 01 60 8c 51 1c || 6 || 7 ||   1 || 609     || $1518c
+|-
+!  49  || $1523a || 01 90 92 51 24 || 9 || 9 ||   1 || 60a     || $15192
+|-
+!  50  || $1523d || 01 80 9d 51 34 || 8 || d ||   1 || 60b     || $1519d
+|}
+</div>
+</div>
+
+===Font data compression format===
+The 1bpp font data for each character is stored as a block of W*H bits in the appropriate range. TODO add more to this.
 
 ==Links==
 None currently.
