--- a/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - ROM Map.wikitext
+++ b/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - ROM Map.wikitext
@@ -5,7 +5,7 @@ For now, these are rom file addresses
 
 {| class="wikitable sortable"
 |-
-!  Category  !!  Address  !! Size  !!  Description
+!  Category  !!  Address  !!  Size  !!  Description
 |-
 |  Levels  ||  $0417ad - $0418d2  ||  98 longs (294 bytes)  ||  Soldier's experience required per level, first value is to reach level 2
 |-
@@ -54,7 +54,7 @@ Dialog font lookup table: [https://raw.githubusercontent.com/TheAnsarya/GameInfo
 
 {| class="wikitable sortable"
 |-
-!  Category  !!  Address  !! Size  !!  Description
+!  Category  !!  Address  !!  Size  !!  Description
 |-
 |  Font Data  ||  $c10ed3 - $c151a9  ||  $42d7 bytes  || Dialog font data
 |-
@@ -78,9 +78,143 @@ h: height, 4 bits
 For now, these are rom file addresses. Placeholder for much more complete monster info.
 The data will be moved out and a more general explanation will be added.
 
+===Primary Data Structure===
+The main data structure starts at <code>$c20000</code>. Each entry is $25 bytes long.
+
 {| class="wikitable sortable"
 |-
-!  Category  !!  Address  !! Size  !!  Description
+!  Offset  !!  Mask  !!  Size  !!  Description
+|-
+|  $00-$01  ||  $ffff  ||  word  ||  Name, index of string
+|-
+|  $02  ||  $3f  ||  6 bits  ||  Level
+|-
+|  $02  ||  $40  ||  bit  ||  Is a Dragon
+|-
+|  $02  ||  $80  ||  bit  ||  Is a Zombie, doesn't seem to actually be checked
+|-
+|  $03-$04  ||  $ffff  ||  word  ||  Experience given when beaten
+|-
+|  $05-$06  ||  $03ff  ||  10 bits  ||  Gold given when beaten
+|-
+|  $06-$07  ||  $0ffc  ||  10 bits  ||  Attack Power
+|-
+|  $07-$08  ||  $3ff0  ||  10 bits  ||  Defensive Strength
+|-
+|  $08-$09  ||  $ffc0  ||  10 bits  ||  Palette, index
+|-
+|  $0a  ||  $ff  ||  byte  ||  Agility
+|-
+|  $0b  ||  $ff  ||  byte  ||  MP
+|-
+|  $0c  ||  $ff  ||  byte  ||  Item, can be given when beaten
+|-
+|  $0d  ||  $ff  ||  byte  ||  Sprite, index
+|-
+|  $0e-$0f  ||  $01ff  ||  9 bits  ||  Command 0
+|-
+|  $0f-$10  ||  $03fe  ||  9 bits  ||  Command 1
+|-
+|  $10-$11  ||  $07fc  ||  9 bits  ||  Command 2
+|-
+|  $11-$12  ||  $0ff8  ||  9 bits  ||  Command 3
+|-
+|  $12-$13  ||  $1ff0  ||  9 bits  ||  Command 4
+|-
+|  $13-$14  ||  $3fe0  ||  9 bits  ||  Command 5
+|-
+|  $14-$15  ||  $7fc0  ||  9 bits  ||  Command 6
+|-
+|  $15-$16  ||  $ff80  ||  9 bits  ||  Command 7
+|-
+|  $17  ||  $01  ||  bit  ||  Command 0 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $02  ||  bit  ||  Command 1 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $04  ||  bit  ||  Command 2 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $08  ||  bit  ||  Command 3 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $10  ||  bit  ||  Command 4 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $20  ||  bit  ||  Command 5 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $40  ||  bit  ||  Command 6 Constraint, command can only be used once per group per turn
+|-
+|  $17  ||  $80  ||  bit  ||  Command 7 Constraint, command can only be used once per group per turn
+|-
+|  $18  ||  $0f  ||  nibble  ||  Command 0 Animation
+|-
+|  $18  ||  $f0  ||  nibble  ||  Command 1 Animation
+|-
+|  $19  ||  $0f  ||  nibble  ||  Command 2 Animation
+|-
+|  $19  ||  $f0  ||  nibble  ||  Command 3 Animation
+|-
+|  $1a  ||  $0f  ||  nibble  ||  Command 4 Animation
+|-
+|  $1a  ||  $f0  ||  nibble  ||  Command 5 Animation
+|-
+|  $1b  ||  $0f  ||  nibble  ||  Command 6 Animation
+|-
+|  $1b  ||  $f0  ||  nibble  ||  Command 7 Animation
+|-
+|  $1c  ||  $0f  ||  nibble  ||  Command 8 Animation, default for no-action taken
+|-
+|  $1c  ||  $30  ||  2 bits  ||  Command Selection Judgment, ??
+|-
+|  $1c  ||  $c0  ||  2 bits  ||  Command Decision Strategies, determines probablity table use when picking a command
+|-
+|  $1d  ||  $07  ||  3 bits  ||  Mikawashi ???
+|-
+|  $1d  ||  $38  ||  3 bits  ||  Item drop probability, probabilities are at $c2aa34
+|-
+|  $1d  ||  $c0  ||  2 bits  ||  Run Multiple Commands, 0=Run Once, 1=50% Run Twice, 2=Run 1 to 3 times (random), 3=Run Twice
+|-
+|  $1e  ||  $03  ||  2 bits  ||  Auto-recovery, heals each turn, table at $c2c3a6
+|-
+|  $1e  ||  $0c  ||  2 bits  ||  Concentrated Attacks, enemy group shares the same target
+|-
+|  $1e  ||  $30  ||  2 bits  ||  Resistance $00
+|-
+|  $1e  ||  $c0  ||  2 bits  ||  Resistance $01
+|-
+|  $1f  ||  $03  ||  2 bits  ||  Resistance $02
+|-
+|  $1f  ||  $0c  ||  2 bits  ||  Resistance $03
+|-
+|  $1f  ||  $30  ||  2 bits  ||  Resistance $04
+|-
+|  $1f  ||  $c0  ||  2 bits  ||  Resistance $05
+|-
+|  $20  ||  $03  ||  2 bits  ||  Resistance $06
+|-
+|  $20  ||  $0c  ||  2 bits  ||  Resistance $07
+|-
+|  $20  ||  $30  ||  2 bits  ||  Resistance $08
+|-
+|  $20  ||  $c0  ||  2 bits  ||  Resistance $09
+|-
+|  $21  ||  $03  ||  2 bits  ||  Resistance $0a
+|-
+|  $21  ||  $0c  ||  2 bits  ||  Resistance $0b
+|-
+|  $21  ||  $30  ||  2 bits  ||  Resistance $0c
+|-
+|  $21  ||  $c0  ||  2 bits  ||  Resistance $0d
+|-
+|  $22-$23  ||  $ffff  ||  word  ||  HP
+|-
+|  $24  ||  $01  ||  bit  ||  Is a Metal monster
+|-  style="background-color:#eaecf0;"
+|  $24  ||  $fe  ||  7 bits  ||  (Unused)
+|}
+
+====Data====
+
+{| class="wikitable sortable"
+|-
+!  Category  !!  Address  !!  Size  !!  Description
 |-
 |  Stats  ||  $020028 - $020029  ||  word  ||  Monster #01 - Slime (スライム) - experience points gained: 4
 |-
@@ -96,7 +230,7 @@ All strings end with <code>ac</code> and are encoded according to the [[Dragon_Q
 
 {| class="wikitable sortable"
 |-
-!  Index  !!  Address  !! Size  !!  Japanese  !!  English  !!  Data
+!  Index  !!  Address  !!  Size  !!  Japanese  !!  English  !!  Data
 |-
 |  01  ||  $3ed958 - $3ed95c  ||  5 bytes  ||  スライム  ||  Slime  ||  <code>4F 69 44 63 AC</code>
 |-
@@ -549,7 +683,7 @@ To decompress a character from the script, feed in text bits to the Huffman tree
 If you were to feed in bits starting at $3CC4A7 bit position 1, you should start on the 111111_'''0'''_1 bit of the <code>FD</code> byte there, consume the twelve bits 01 1111 1010 01 in the buffer from the <code>FD FA 76</code> bytes, and take a path in the Huffman tree data to ROM position $166C1 (character value $0521, ツ).
 
 ==Dialogue Font==
-The variable-width and variable-height font is stored in two blocks: a metadata table from $151AA-$1512A3, and the font data itself from $10ED3-$151A9.
+There are two blocks of data for the variable-width and variable-height font: a metadata table from $151AA-$152A3, and the compressed font data itself from $10ED3-$151A9.
 
 ===Font metadata table===
 The table consists of 50 five-byte entries that come in the following binary format:
@@ -560,114 +694,114 @@ W = character width, H = character height
 
 S = number of characters in a group for a particular W*H pair
 
-The bank number being $c1 is hard-coded into the <code>lda #$c1</code> instruction at $1BBD4.
+The bank number being $C1 is hard-coded into the <code>LDA #$C1</code> instruction at $1BBD4. Which is to say, the `C1` byte is located at $1BBD5.
 
 <div class="mw-collapsible mw-collapsed">
 <strong>Summary of font metadata table</strong>
 <div class="mw-collapsible-content">
 {| class="wikitable"
 |-
-!  Group #  ||  Address  ||  Raw Data  ||  Width  ||  Height  ||  # Characters  || Character range  ||  ROM addr
+! Group # || table offset || raw data || W || H || # chars || char range || ROM addr
 |-
-!  1  ||  $c151aa  ||  b4 b2 d3 0e 34  ||  b  ||  d  || 2b4 ||  $201 - $4b4  ||  $c10ed3
+!  1 || $151aa || b4 b2 d3 0e 34 || b || d || 2b4 || 201-4b4 || $10ed3
 |-
-!  2  ||  $c151ad  ||  0b 70 25 3f 30  ||  7  ||  c  ||   b ||  $4b5 - $4bf  ||  $c13f25
+!  2 || $151af || 0b 70 25 3f 30 || 7 || c ||   b || 4b5-4bf || $13f25
 |-
-!  3  ||  $c151b0  ||  01 50 99 3f 30  ||  5  ||  c  ||   1 ||  $4c0  ||  $c13f99
+!  3 || $151b4 || 01 50 99 3f 30 || 5 || c ||   1 || 4c0     || $13f99
 |-
-!  4  ||  $c151b3  ||  1b 90 a1 3f 2c  ||  9  ||  b  ||  1b ||  $4c1 - $4db  ||  $c13fa1
+!  4 || $151b9 || 1b 90 a1 3f 2c || 9 || b ||  1b || 4c1-4db || $13fa1
 |-
-!  5  ||  $c151b6  ||  11 80 f0 40 2c  ||  8  ||  b  ||  11 ||  $4dc - $4ec  ||  $c140f0
+!  5 || $151be || 11 80 f0 40 2c || 8 || b ||  11 || 4dc-4ec || $140f0
 |-
-!  6  ||  $c151b9  ||  06 70 ab 41 2c  ||  7  ||  b  ||   6 ||  $4ed - $4f2  ||  $c141ab
+!  6 || $151c3 || 06 70 ab 41 2c || 7 || b ||   6 || 4ed-4f2 || $141ab
 |-
-!  7  ||  $c151bc  ||  01 50 e5 41 2c  ||  5  ||  b  ||   1 ||  $4f3  ||  $c141e5
+!  7 || $151c8 || 01 50 e5 41 2c || 5 || b ||   1 || 4f3     || $141e5
 |-
-!  8  ||  $c151bf  ||  1b b0 ec 41 2c  ||  b  ||  b  ||  1b ||  $4f4 - $50e  ||  $c141ec
+!  8 || $151cd || 1b b0 ec 41 2c || b || b ||  1b || 4f4-50e || $141ec
 |-
-!  9  ||  $c151c2  ||  16 a0 85 43 2c  ||  a  ||  b  ||  16 ||  $50f - $524  ||  $c14385
+!  9 || $151d2 || 16 a0 85 43 2c || a || b ||  16 || 50f-524 || $14385
 |-
-!  10  || $151c5 || 03 30 b4 44 2c || 3 || b ||   3 || 525-527 || $144b4
+! 10 || $151d7 || 03 30 b4 44 2c || 3 || b ||   3 || 525-527 || $144b4
 |-
-!  11  || $151c8 || 03 90 c1 44 0c || 9 || 3 ||   3 || 528-52a || $144c1
+! 11 || $151dc || 03 90 c1 44 0c || 9 || 3 ||   3 || 528-52a || $144c1
 |-
-!  12  || $151cb || 02 90 cc 44 1c || 9 || 7 ||   2 || 52b-52c || $144cc
+! 12 || $151e1 || 02 90 cc 44 1c || 9 || 7 ||   2 || 52b-52c || $144cc
 |-
-!  13  || $151ce || 04 90 dc 44 30 || 9 || c ||   4 || 52d-530 || $144dc
+! 13 || $151e6 || 04 90 dc 44 30 || 9 || c ||   4 || 52d-530 || $144dc
 |-
-!  14  || $151d1 || 01 90 12 45 04 || 9 || 1 ||   1 || 531     || $14512
+! 14 || $151eb || 01 90 12 45 04 || 9 || 1 ||   1 || 531     || $14512
 |-
-!  15  || $151d4 || 01 70 14 45 04 || 7 || 1 ||   1 || 532     || $14514
+! 15 || $151f0 || 01 70 14 45 04 || 7 || 1 ||   1 || 532     || $14514
 |-
-!  16  || $151d7 || 02 70 15 45 28 || 7 || a ||   2 || 533-534 || $14515
+! 16 || $151f5 || 02 70 15 45 28 || 7 || a ||   2 || 533-534 || $14515
 |-
-!  17  || $151da || 03 90 27 45 18 || 9 || 6 ||   3 || 535-537 || $14527
+! 17 || $151fa || 03 90 27 45 18 || 9 || 6 ||   3 || 535-537 || $14527
 |-
-!  18  || $151dd || 18 c0 3c 45 30 || c || c ||  18 || 538-54f || $1453c
+! 18 || $151ff || 18 c0 3c 45 30 || c || c ||  18 || 538-54f || $1453c
 |-
-!  19  || $151e0 || 01 a0 ec 46 18 || a || 6 ||   1 || 550     || $146ec
+! 19 || $15204 || 01 a0 ec 46 18 || a || 6 ||   1 || 550     || $146ec
 |-
-!  20  || $151e3 || 01 40 f4 46 30 || 4 || c ||   1 || 551     || $146f4
+! 20 || $15209 || 01 40 f4 46 30 || 4 || c ||   1 || 551     || $146f4
 |-
-!  21  || $151e6 || 02 60 fa 46 34 || 6 || d ||   2 || 552-553 || $146fa
+! 21 || $1520e || 02 60 fa 46 34 || 6 || d ||   2 || 552-553 || $146fa
 |-
-!  22  || $151e9 || 01 50 0e 47 34 || 5 || d ||   1 || 554     || $1470e
+! 22 || $15213 || 01 50 0e 47 34 || 5 || d ||   1 || 554     || $1470e
 |-
-!  23  || $151ec || 03 60 17 47 24 || 6 || 9 ||   3 || 555-557 || $14717
+! 23 || $15218 || 03 60 17 47 24 || 6 || 9 ||   3 || 555-557 || $14717
 |-
-!  24  || $151ef || 02 a0 2c 47 20 || a || 8 ||   2 || 558-559 || $1472c
+! 24 || $1521d || 02 a0 2c 47 20 || a || 8 ||   2 || 558-559 || $1472c
 |-
-!  25  || $151f2 || 0c a0 40 47 30 || a || c ||   c || 55a-565 || $14740
+! 25 || $15222 || 0c a0 40 47 30 || a || c ||   c || 55a-565 || $14740
 |-
-!  26  || $151f5 || 05 80 f4 47 30 || 8 || c ||   5 || 566-56a || $147f4
+! 26 || $15227 || 05 80 f4 47 30 || 8 || c ||   5 || 566-56a || $147f4
 |-
-!  27  || $151f8 || 4e b0 30 48 30 || b || c ||  4e || 56b-5b8 || $14830
+! 27 || $1522c || 4e b0 30 48 30 || b || c ||  4e || 56b-5b8 || $14830
 |-
-!  28  || $151fb || 06 80 37 4d 24 || 8 || 9 ||   6 || 5b9-5be || $14d37
+! 28 || $15231 || 06 80 37 4d 24 || 8 || 9 ||   6 || 5b9-5be || $14d37
 |-
-!  29  || $151fe || 0e a0 6d 4d 34 || a || d ||   e || 5bf-5cc || $14d6d
+! 29 || $15236 || 0e a0 6d 4d 34 || a || d ||   e || 5bf-5cc || $14d6d
 |-
-!  30  || $15201 || 05 90 51 4e 34 || 9 || d ||   5 || 5cd-5d1 || $14e51
+! 30 || $1523b || 05 90 51 4e 34 || 9 || d ||   5 || 5cd-5d1 || $14e51
 |-
-!  31  || $15204 || 04 b0 9b 4e 28 || b || a ||   4 || 5d2-5d5 || $14e9b
+! 31 || $15240 || 04 b0 9b 4e 28 || b || a ||   4 || 5d2-5d5 || $14e9b
 |-
-!  32  || $15207 || 03 70 d2 4e 24 || 7 || 9 ||   3 || 5d6-5d8 || $14ed2
+! 32 || $15245 || 03 70 d2 4e 24 || 7 || 9 ||   3 || 5d6-5d8 || $14ed2
 |-
-!  33  || $1520a || 0d c0 ea 4e 2c || c || b ||   d || 5d9-5e5 || $14eea
+! 33 || $1524a || 0d c0 ea 4e 2c || c || b ||   d || 5d9-5e5 || $14eea
 |-
-!  34  || $1520d || 03 d0 c1 4f 2c || d || b ||   3 || 5e6-5e8 || $14fc1
+! 34 || $1524f || 03 d0 c1 4f 2c || d || b ||   3 || 5e6-5e8 || $14fc1
 |-
-!  35  || $15210 || 01 80 f7 4f 28 || 8 || a ||   1 || 5e9     || $14ff7
+! 35 || $15254 || 01 80 f7 4f 28 || 8 || a ||   1 || 5e9     || $14ff7
 |-
-!  36  || $15213 || 04 80 01 50 20 || 8 || 8 ||   4 || 5ea-5ed || $15001
+! 36 || $15259 || 04 80 01 50 20 || 8 || 8 ||   4 || 5ea-5ed || $15001
 |-
-!  37  || $15216 || 02 b0 21 50 24 || b || 9 ||   2 || 5ee-5ef || $15021
+! 37 || $1525e || 02 b0 21 50 24 || b || 9 ||   2 || 5ee-5ef || $15021
 |-
-!  38  || $15219 || 03 a0 3a 50 28 || a || a ||   3 || 5f0-5f2 || $1503a
+! 38 || $15263 || 03 a0 3a 50 28 || a || a ||   3 || 5f0-5f2 || $1503a
 |-
-!  39  || $1521c || 09 90 60 50 28 || 9 || a ||   9 || 5f3-5fb || $15060
+! 39 || $15268 || 09 90 60 50 28 || 9 || a ||   9 || 5f3-5fb || $15060
 |-
-!  40  || $1521f || 01 b0 c6 50 38 || b || e ||   1 || 5fc     || $150c6
+! 40 || $1526d || 01 b0 c6 50 38 || b || e ||   1 || 5fc     || $150c6
 |-
-!  41  || $15222 || 01 b0 da 50 1c || b || 7 ||   1 || 5fd     || $150da
+! 41 || $15272 || 01 b0 da 50 1c || b || 7 ||   1 || 5fd     || $150da
 |-
-!  42  || $15225 || 01 d0 e4 50 30 || d || c ||   1 || 5fe     || $150e4
+! 42 || $15277 || 01 d0 e4 50 30 || d || c ||   1 || 5fe     || $150e4
 |-
-!  43  || $15228 || 01 70 f8 50 1c || 7 || 7 ||   1 || 5ff     || $150f8
+! 43 || $1527c || 01 70 f8 50 1c || 7 || 7 ||   1 || 5ff     || $150f8
 |-
-!  44  || $1522b || 02 a0 ff 50 24 || a || 9 ||   2 || 600-601 || $150ff
+! 44 || $15281 || 02 a0 ff 50 24 || a || 9 ||   2 || 600-601 || $150ff
 |-
-!  45  || $1522e || 01 c0 16 51 24 || c || 9 ||   1 || 602     || $15116
+! 45 || $15286 || 01 c0 16 51 24 || c || 9 ||   1 || 602     || $15116
 |-
-!  46  || $15231 || 05 c0 24 51 34 || c || d ||   5 || 603-607 || $15124
+! 46 || $1528b || 05 c0 24 51 34 || c || d ||   5 || 603-607 || $15124
 |-
-!  47  || $15234 || 01 80 86 51 18 || 8 || 6 ||   1 || 608     || $15186
+! 47 || $15290 || 01 80 86 51 18 || 8 || 6 ||   1 || 608     || $15186
 |-
-!  48  || $15237 || 01 60 8c 51 1c || 6 || 7 ||   1 || 609     || $1518c
+! 48 || $15295 || 01 60 8c 51 1c || 6 || 7 ||   1 || 609     || $1518c
 |-
-!  49  || $1523a || 01 90 92 51 24 || 9 || 9 ||   1 || 60a     || $15192
+! 49 || $1529a || 01 90 92 51 24 || 9 || 9 ||   1 || 60a     || $15192
 |-
-!  50  || $1523d || 01 80 9d 51 34 || 8 || d ||   1 || 60b     || $1519d
+! 50 || $1529f || 01 80 9d 51 34 || 8 || d ||   1 || 60b     || $1519d
 |}
 </div>
 </div>
